# technical_challenge

./: CMakeLists.txt  README.md
graphs/: generated_graph.txt
src/: graph.cpp  graph.h  main.cpp
test/: graph_test.cpp
utils/: generateGraph.py
